# chemic

./: .gitignore  cli.py  formulae.csv  gui.py  main.py  utils.py
chemic/: README.md  pyproject.toml
chemic/chemic/: __init__.py  gui.py  main.py  run.py
js/: data.json  main.js  molecule.js  package-lock.json  package.json
js/app/: package-lock.json  package.json  vite.config.ts
js/app/src/: molecule.js  root.tsx  utils.js
js/app/src/routes/: about.tsx  index.tsx
py/: README.md  pyproject.toml
py/chemic/: periodic_table.csv  utils.py
utils/fetch/: failed.txt  fetch.py
utils/lib/data/: formulae.json  goodman-sciences.json  k-sriram.csv  k-sriram.json  nullpilot.csv  nullpilot.json  robert-wb.json  sample_response_text.html  species.json  speters33w.json
